# python-packaging-tool

./: .gitignore  MANIFEST.in  README.md  pyproject.toml  setup.cfg
pbt/: __init__.py  __main__.py  _aws.py  _fbs.py  _gpg.py  _settings.py  _state.py  _util.py  _variables.py  cmdline.py  paths.py  platform.py  resources.py  upload.py
pbt/builtin_commands/: __init__.py  _account.py  _docker.py  _licensing.py  _util.py
pbt/builtin_commands/_gpg/: __init__.py
pbt/builtin_commands/project_template/: setup.cfg
pbt/freeze/: __init__.py  arch.py  fedora.py  linux.py  mac.py  ubuntu.py  windows.py
pbt/installer/: __init__.py  arch.py  fedora.py  linux.py  ubuntu.py  windows.py
pbt/installer/mac/: __init__.py
pbt/repo/: arch.py  fedora.py  ubuntu.py
pbt/sign/: windows.py
pbt/sign_installer/: arch.py  fedora.py  windows.py
ppt/: __init__.py  __main__.py  _aws.py  _fbs.py  _gpg.py  _server.py  _state.py  _variables.py  cmdline.py  error.py  paths.py  platform.py  resources.py  upload.py
ppt/builtin_commands/: __init__.py  _account.py  _docker.py  _licensing.py  _util.py
ppt/builtin_commands/_gpg/: __init__.py
ppt/freeze/: __init__.py  arch.py  fedora.py  linux.py  mac.py  ubuntu.py  windows.py
ppt/installer/: __init__.py  arch.py  fedora.py  linux.py  ubuntu.py  windows.py
ppt/installer/mac/: __init__.py
ppt/repo/: arch.py  fedora.py  ubuntu.py
ppt/sign/: windows.py
ppt/sign_installer/: arch.py  fedora.py  windows.py
tests/test_pbt/: __init__.py  test_freeze.py  test_settings.py
tests/test_pbt/builtin_commands/: test___init__.py  test__util.py
(+3 files in other folders)
