[metadata]
name = ppt
# Also update ppt/_defaults/requirements/base.txt when you change this:
version = 1.0.0
description = A cross-platform build system for Python
description-file = README.md
long_description = file: README.md
long_description_content_type = text/markdown
author = Michael Herrmann, James Clare
url = https://github.com/lgili/python-packaging-tool
license = GPLv3 or later
classifiers =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Developers
    License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Topic :: Software Development :: Libraries
    Topic :: Software Development :: Libraries :: Python Modules
platforms =
    MacOS
    Windows
    Debian
    Fedora
    CentOS
    Arch

[options]
include_package_data = True
python_requires = >=3.5
install_requires =
    PyInstaller
    packaging

packages = find:

[options.packages.find]
include = ppt*

[options.entry_points]
console_scripts =
    ppt = ppt.__main__:_main

[options.extras_require]
licensing = rsa>=3.4.2
sentry = sentry-sdk>=0.6.6
upload = boto3
